# MeshRenderDataMaker

./: CMakeLists.txt
shader/: human.fs  human.vs
src/: CMakeLists.txt  Color.h  GraphicsManager.cpp  GraphicsManager.h  Mesh.cpp  Mesh.h  main.cpp
